# molalign

./: .gitignore  README.md  pyproject.toml  setup.py
molalign/: .align_many_to_one_tb.py.swp  .driver.py.swp  align_many_to_one_orca.py  align_many_to_one_orca_old.py  align_many_to_one_tb_parallel.py  align_many_to_one_tb_parallel2.py  all_grid.py  all_grid_orca.py  all_grid_tb.py  all_grid_tb_parallel.py  all_grid_tb_parallel3.py  allign_many_to_one.py  att_factor.py  bolt.py  bolt_min.py  boltzmann_average.py  cluster_solv_opt.py  dG.py  dG_2.py  dG_KB.py  driver.py  driver3.py  driver_orca.py  extract_xtb_results.py  moist  molalign_run_tb_2.py  plot_grid_point_energy.py  plot_normals.py  run_extended_grids_orca.py  run_extended_grids_tb_parallel.py  run_extended_grids_tb_parallel2.py  run_molalign_tb.py  slice.py  solv.py  solv_old.py  therm.py  xtb_scan.py
molalign.egg-info/: PKG-INFO
tests/: charges  dG_per_grid_alanine.csv  helium.cpcm  wbo  xtbrestart  xtbtopo.mol
tests/CN/1/cn_water_out/: solute_data_original.npz
tests/acetonitrile/: xtb_results.json
tests/acetonitrile/water/: acetonitrile.cpcm  water.cpcm
tests/acetonitrile/water/acetonitrile_data_vs_water_data_complexes/: acetonitrile_water.json
tests/water/: water.cpcm
