[project]
name = "molalign"
version = "0.1.0"
description = "Toolkit for generating solute-solvent arrangements with subseqental xtb energy scanning"
authors = [{name = "Aleksandar Trajkovski", email = "s37atraj@uni-bonn.de"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy", "scipy"]
[project.scripts]
cpcm-reader = "molalign.cpcm_to_npz:main"
align-grid = "molalign.all_grid:main"
xtb-scan = "molalign.xtb_scan:main"
xtb-extract = "molalign.extract_xtb_results:main"
molalign-run = "molalign.driver:main"
plot-grid-energy = "molalign.plot_grid_point_energy:main"
plot-normals = "molalign.plot_normals:main"
slice = "molalign.slice:main"
plot-grid = "molalign.plot_grid:main"
boltzmann = "molalign.boltzmann_average:cli_main"
molalign = "molalign.run_molalign_tb:main"
molalign-extended = "molalign.run_extended_grids_tb:main"
align-grid-tb = "molalign.all_grid_tb:cli_main"
align-grid-tb-two-same = "molalign.all_grid_tb_two_solvents:cli_main"
cluster-solv = "molalign.cluster_solv:main"
cluster-solv-opt = "molalign.cluster_solv_opt:main"
dGloc = "molalign.dGloc:main"
att_factor = "molalign.att_factor:main"
therm = "molalign.therm:main"
corr = "molalign.corr:main"
solv = "molalign.solv:main"
align-grid-orca = "molalign.all_grid_orca:cli_main"
align_orca = "molalign.align_many_to_one_orca:main"
molalign-extended-orca = "molalign.run_extended_grids_orca:main"
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

